test/spec/memory64/memory.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/memory64/memory.wast
;;; ARGS*: --enable-memory64
(;; STDOUT ;;;
out/test/spec/memory64/memory.wast:10: assert_invalid passed:
  out/test/spec/memory64/memory/memory.6.wasm:000000f: error: only one memory block allowed
  000000f: error: OnMemory callback failed
out/test/spec/memory64/memory.wast:11: assert_invalid passed:
  out/test/spec/memory64/memory/memory.7.wasm:0000023: error: only one memory block allowed
  0000023: error: OnMemory callback failed
out/test/spec/memory64/memory.wast:20: assert_invalid passed:
  0000000: error: memory variable out of range: 0 (max 0)
  000000c: error: BeginDataSegment callback failed
out/test/spec/memory64/memory.wast:21: assert_invalid passed:
  0000000: error: memory variable out of range: 0 (max 0)
  000000c: error: BeginDataSegment callback failed
out/test/spec/memory64/memory.wast:22: assert_invalid passed:
  0000000: error: memory variable out of range: 0 (max 0)
  000000c: error: BeginDataSegment callback failed
out/test/spec/memory64/memory.wast:25: assert_invalid passed:
  000001b: error: load/store memory 0 out of range 0
out/test/spec/memory64/memory.wast:29: assert_invalid passed:
  0000020: error: load/store memory 0 out of range 0
out/test/spec/memory64/memory.wast:33: assert_invalid passed:
  000001b: error: load/store memory 0 out of range 0
out/test/spec/memory64/memory.wast:37: assert_invalid passed:
  000001d: error: load/store memory 0 out of range 0
out/test/spec/memory64/memory.wast:41: assert_invalid passed:
  0000000: error: memory variable out of range: 0 (max 0)
  0000019: error: OnMemorySizeExpr callback failed
out/test/spec/memory64/memory.wast:45: assert_invalid passed:
  0000000: error: memory variable out of range: 0 (max 0)
  000001b: error: OnMemoryGrowExpr callback failed
out/test/spec/memory64/memory.wast:51: assert_invalid passed:
  out/test/spec/memory64/memory/memory.20.wasm:000000e: error: max pages (0) must be >= initial pages (1)
  000000e: error: OnMemory callback failed
out/test/spec/memory64/memory.wast:55: assert_invalid passed:
  out/test/spec/memory64/memory/memory.21.wasm:000000f: error: initial pages (65537) must be <= (65536)
  000000f: error: OnMemory callback failed
out/test/spec/memory64/memory.wast:59: assert_invalid passed:
  out/test/spec/memory64/memory/memory.22.wasm:0000011: error: initial pages (2147483648) must be <= (65536)
  0000011: error: OnMemory callback failed
out/test/spec/memory64/memory.wast:63: assert_invalid passed:
  out/test/spec/memory64/memory/memory.23.wasm:0000011: error: initial pages (4294967295) must be <= (65536)
  0000011: error: OnMemory callback failed
out/test/spec/memory64/memory.wast:67: assert_invalid passed:
  out/test/spec/memory64/memory/memory.24.wasm:0000010: error: max pages (65537) must be <= (65536)
  0000010: error: OnMemory callback failed
out/test/spec/memory64/memory.wast:71: assert_invalid passed:
  out/test/spec/memory64/memory/memory.25.wasm:0000012: error: max pages (2147483648) must be <= (65536)
  0000012: error: OnMemory callback failed
out/test/spec/memory64/memory.wast:75: assert_invalid passed:
  out/test/spec/memory64/memory/memory.26.wasm:0000012: error: max pages (4294967295) must be <= (65536)
  0000012: error: OnMemory callback failed
out/test/spec/memory64/memory.wast:80: assert_invalid passed:
  out/test/spec/memory64/memory/memory.27.wat:1:9: error: invalid int "0x1_0000_0000"
  (memory 0x1_0000_0000)
          ^^^^^^^^^^^^^
out/test/spec/memory64/memory.wast:84: assert_invalid passed:
  out/test/spec/memory64/memory/memory.28.wat:1:9: error: invalid int "0x1_0000_0000"
  (memory 0x1_0000_0000 0x1_0000_0000)
          ^^^^^^^^^^^^^
  out/test/spec/memory64/memory/memory.28.wat:1:23: error: invalid int "0x1_0000_0000"
  (memory 0x1_0000_0000 0x1_0000_0000)
                        ^^^^^^^^^^^^^
out/test/spec/memory64/memory.wast:88: assert_invalid passed:
  out/test/spec/memory64/memory/memory.29.wat:1:11: error: invalid int "0x1_0000_0000"
  (memory 0 0x1_0000_0000)
            ^^^^^^^^^^^^^
out/test/spec/memory64/memory.wast:231: assert_malformed passed:
  out/test/spec/memory64/memory/memory.31.wat:1:17: error: redefinition of memory "$foo"
  (memory $foo 1)(memory $foo 1)
                  ^^^^^^
out/test/spec/memory64/memory.wast:235: assert_malformed passed:
  out/test/spec/memory64/memory/memory.32.wat:1:32: error: redefinition of memory "$foo"
  (import "" "" (memory $foo 1))(memory $foo 1)
                                 ^^^^^^
out/test/spec/memory64/memory.wast:239: assert_malformed passed:
  out/test/spec/memory64/memory/memory.33.wat:1:32: error: redefinition of memory "$foo"
  (import "" "" (memory $foo 1))(import "" "" (memory $foo 1))
                                 ^^^^^^
69/69 tests passed.
;;; STDOUT ;;)
